examples/invalid/array.lama
[[int]] a ;
a = [[int]] [[int] [1,2], [int] [true]];
print a;
print [bool] [true,true,false];